--- a/Owner.html
+++ b/Owner.html
@@ -28,17 +28,9 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
-        with our comprehensive digital marketing solutions. Specializing in SEO, 
-        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
-        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
-        Our tailored marketing solutions deliver measurable results, helping grow your business. 
-        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
-        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
-        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
-        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
-        maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative Kudi Digital Marketing Company Owner" />
+    <meta name="description"
+        content="Pooja Jain, Founder & CEO of Kreative Kudi, a leading digital marketing company and institute. Transforming businesses with innovative strategies." />
+    <meta name="author" content="Kreative Kudi" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -51,10 +43,10 @@
     </script>
 
     <!-- Title  -->
-    <title>Empowering Your Digital Presence | Owner & CEo</title>
+    <title>Empowering Your Digital Presence | Founder & CEo</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="personal logo/face c2.png" />
+    <link rel="shortcut icon" href="personal logo/face c2.png" alt="logo" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -132,24 +124,26 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="Institute.html">Institute</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Institute.html">Institute</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">portfolio</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="articles.html">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Owner.html">Founder</a>
                     </li>
 
                     <li class="nav-item">
@@ -174,7 +168,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="img">
-                        <img src="profile img/pooja.jpg" alt="">
+                        <img src="profile img/pooja.jpg" alt="image">
                     </div>
                 </div>
                 <div class="col-lg-8 valign">
@@ -487,7 +481,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 img md-mb50">
-                    <img src="profile img/pooja.jpg" alt="">
+                    <img src="profile img/pooja.jpg" alt="image">
                 </div>
                 <div class="col-lg-5 valign">
                     <div class="cont full-width">
@@ -544,7 +538,7 @@
                                 <div class="cont">
                                     <div class="author">
                                         <div class="img">
-                                            <img src="profile img/rishi.jpg" alt="">
+                                            <img src="profile img/rishi.jpg" alt="image">
                                         </div>
                                         <h6 class="author-name color-font">Rishi Shah</h6>
                                         <span class="author-details">Yamuna Hospitality</span>
@@ -562,7 +556,7 @@
                                 <div class="cont">
                                     <div class="author">
                                         <div class="img">
-                                            <img src="profile img/patel.jpg" alt="">
+                                            <img src="profile img/patel.jpg" alt="image">
                                         </div>
                                         <h6 class="author-name color-font">Prakash Patel</h6>
                                         <span class="author-details">Promax Reality</span>
@@ -580,7 +574,8 @@
                                 <div class="cont">
                                     <div class="author">
                                         <div class="img">
-                                            <img src="profile img/WhatsApp Image 2022-12-16 at 20.12.27.jpg" alt="">
+                                            <img src="profile img/WhatsApp Image 2022-12-16 at 20.12.27.jpg"
+                                                alt="image">
                                         </div>
                                         <h6 class="author-name color-font">Premal Shah</h6>
                                         <span class="author-details">Hastmelap</span>
@@ -598,7 +593,7 @@
                                 <div class="cont">
                                     <div class="author">
                                         <div class="img">
-                                            <img src="profile img/rutvi unatkad.jpg" alt="">
+                                            <img src="profile img/rutvi unatkad.jpg" alt="image">
                                         </div>
                                         <h6 class="author-name color-font">Rutvi Unatkad</h6>
                                         <span class="author-details">Graphic Designer</span>
@@ -651,16 +646,16 @@
                 <div class="col-lg-7 offset-lg-1">
                     <div class="item wow fadeInUp" data-wow-delay=".3s">
                         <div class="img valign">
-                            <img src="profile img/blog1.jpg" alt="">
+                            <img src="profile img/blog1.jpg" alt="image">
                         </div>
                         <div class="cont valign">
                             <div>
                                 <div class="info">
-                                    <a href="#0" class="date">
+                                    <a href="article1.html" class="date">
                                         <span><i>17</i> December</span>
                                     </a>
                                     <span>/</span>
-                                    <a href="#0" class="tag">
+                                    <a href="article1.html" class="tag">
                                         <span>THE ECONOMIC TIMES</span>
                                     </a>
                                 </div>
@@ -672,16 +667,16 @@
                     </div>
                     <div class="item wow fadeInUp" data-wow-delay=".3s">
                         <div class="img valign">
-                            <img src="profile img/d.png" alt="">
+                            <img src="profile img/d.png" alt="image">
                         </div>
                         <div class="cont valign">
                             <div>
                                 <div class="info">
-                                    <a href="#0" class="date">
+                                    <a href="article2.html" class="date">
                                         <span><i>17</i> November</span>
                                     </a>
                                     <span>/</span>
-                                    <a href="#0" class="tag">
+                                    <a href="article2.html" class="tag">
                                         <span>IIM SKILLS</span>
                                     </a>
                                 </div>
@@ -773,7 +768,7 @@
                                               cursor: pointer;
                                               box-shadow: 2px 2px 3px #999;
                                             ">
-        <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+        <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
     </a>
 
 
@@ -792,8 +787,8 @@
                                 <span class="icon pe-7s-map-marker"></span>
                                 <div class="cont">
                                     <h6>Address</h6>
-                                    <p>H-128, Sumel Business Park-6 </p>
-                                    <p>Dhudheswer,Ahmedabad-380004</p>
+                                    <p>SATYA TWO,near Bharat Petroleum,</p>
+                                    <p>Shastrinagar, Naranpura, Ahmedabad-380013</p>
                                     <p>Gujarat, INDIA</p>
                                 </div>
                             </li>
@@ -822,7 +817,7 @@
                         <ul>
                             <li>
                                 <div class="img">
-                                    <img src="profile img/d.png" alt="">
+                                    <img src="profile img/d.png" alt="logo">
                                 </div>
                                 <div class="sm-post">
                                     <p>Digital marketing records 40% growth
@@ -832,7 +827,7 @@
                             </li>
                             <li>
                                 <div class="img">
-                                    <img src="profile img/d2.jpg" alt="">
+                                    <img src="profile img/d2.jpg" alt="logo">
                                 </div>
                                 <div class="sm-post">
                                     <p>Digital advertising industry in India expected
@@ -846,7 +841,7 @@
                 <div class="col-lg-4">
                     <div class="item">
                         <div class="logo">
-                            <img src="personal logo/b logo.png" alt="">
+                            <img src="personal logo/b logo.png" alt="logo">
                         </div>
                         <div class="social">
                             <a href="https://www.facebook.com/kreativekudi"><i class="fab fa-facebook-f"></i></a>
@@ -868,10 +863,6 @@
     </footer>
 
     <!-- ==================== End Footer ==================== -->
-
-
-
-
 
     <!-- jQuery -->
     <script src="js/jquery-3.0.0.min.js"></script>
