--- a/articles.html
+++ b/articles.html
@@ -29,17 +29,9 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
-        with our comprehensive digital marketing solutions. Specializing in SEO, 
-        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
-        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
-        Our tailored marketing solutions deliver measurable results, helping grow your business. 
-        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
-        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
-        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
-        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
-        maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative Kudi Digital Marketing Company" />
+    <meta name="description"
+        content="Stay updated with our insightful digital marketing blogs. Unlock valuable tips, trends, and strategies to enhance your online presence and drive success" />
+    <meta name="author" content="Kreative Kudi" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -52,10 +44,10 @@
     </script>
 
     <!-- Title  -->
-    <title>Designing the Future of Marketing | Articles</title>
+    <title>Stay updated with our insightful digital marketing blogs</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="personal logo/face c2.png" />
+    <link rel="shortcut icon" href="personal logo/face c2.png" alt="logo" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -133,26 +125,27 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
-
-                            <a class="dropdown-item" href="index3.html">Institute</a>
-
-                            <a class="dropdown-item" href="index7.html">Owner & CEo</a>
-
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Institute.html">Institute</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="works2.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">portfolio</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="articles.html">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Owner.html">Founder</a>
+                    </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -204,13 +197,13 @@
                             <div class="item mb-80">
                                 <div class="img">
                                     <a href="article1.html">
-                                        <img src="profile img/blog1.jpg" alt="">
+                                        <img src="profile img/blog1.jpg" alt="image">
                                     </a>
                                 </div>
                                 <div class="content">
                                     <div class="row justify-content-center">
                                         <div class="col-10">
-                                            <a href="#0" class="date">
+                                            <a href="article1.html" class="date">
                                                 <span class="num">17</span>
                                                 <span>December 2022</span>
                                             </a>
@@ -234,20 +227,21 @@
                             <div class="item mb-80">
                                 <div class="img">
                                     <a href="article2.html">
-                                        <img src="profile img/d.png" alt="">
+                                        <img src="profile img/d.png" alt="image">
                                     </a>
                                 </div>
                                 <div class="content">
                                     <div class="row justify-content-center">
                                         <div class="col-10">
-                                            <a href="#0" class="date">
+                                            <a href="article2.html" class="date">
                                                 <span class="num">20</span>
                                                 <span>November 2022</span>
                                             </a>
                                             <div class="tags">
                                                 <a
                                                     href="https://iimskills.com/digital-marketing-growth/#:~:text=Digital%20marketing%20is%20the%20fastest,to%2030%25%20rate%20per%20year.">IIM
-                                                    SKILLS</a>
+                                                    SKILLS
+                                                </a>
 
                                             </div>
                                             <h4 class="title"><a href="article2.html">Digital Marketing Growth in
@@ -270,13 +264,13 @@
                             <div class="item mb-80">
                                 <div class="img">
                                     <a href="article3.html">
-                                        <img src="profile img/b.jpg" alt="">
+                                        <img src="profile img/b.jpg" alt="image">
                                     </a>
                                 </div>
                                 <div class="content">
                                     <div class="row justify-content-center">
                                         <div class="col-10">
-                                            <a href="#0" class="date">
+                                            <a href="article3.html" class="date">
                                                 <span class="num">18</span>
                                                 <span>October 2022</span>
                                             </a>
@@ -286,7 +280,7 @@
                                                     HERALD</a>
 
                                             </div>
-                                            <h4 class="title"><a href="articles.html">The Post-Pandemic Rise of Digital
+                                            <h4 class="title"><a href="article3.html">The Post-Pandemic Rise of Digital
                                                     Marketing in India
                                                 </a></h4>
                                             <p>The age of digital marketing has arrived. The proliferation of e-commerce
@@ -322,7 +316,7 @@
                                                   cursor: pointer;
                                                   box-shadow: 2px 2px 3px #999;
                                                 ">
-            <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+            <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
         </a>
 
         <!-- ==================== End Blog ==================== -->
@@ -344,8 +338,8 @@
                                     <span class="icon pe-7s-map-marker"></span>
                                     <div class="cont">
                                         <h6>Address</h6>
-                                        <p>H-128, Sumel Business Park-6 </p>
-                                        <p>Dhudheswer,Ahmedabad-380004</p>
+                                        <p>SATYA TWO,near Bharat Petroleum,</p>
+                                        <p>Shastrinagar, Naranpura, Ahmedabad-380013</p>
                                         <p>Gujarat, INDIA</p>
                                     </div>
                                 </li>
@@ -374,7 +368,7 @@
                             <ul>
                                 <li>
                                     <div class="img">
-                                        <img src="profile img/d.png" alt="">
+                                        <img src="profile img/d.png" alt="image">
                                     </div>
                                     <div class="sm-post">
                                         <p>Digital marketing records 40% growth
@@ -384,7 +378,7 @@
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="profile img/d2.jpg" alt="">
+                                        <img src="profile img/d2.jpg" alt="image">
                                     </div>
                                     <div class="sm-post">
                                         <p>Digital advertising industry in India expected
@@ -399,7 +393,7 @@
                     <div class="col-lg-4">
                         <div class="item">
                             <div class="logo">
-                                <img src="personal logo/b logo.png" alt="">
+                                <img src="personal logo/b logo.png" alt="logo">
                             </div>
                             <div class="social">
                                 <a href="https://www.facebook.com/kreativekudi"><i class="fab fa-facebook-f"></i></a>
@@ -427,10 +421,6 @@
     </div>
 
     <!-- ==================== End wrapper ==================== -->
-
-
-
-
 
     <!-- jQuery -->
     <script src="js/jquery-3.0.0.min.js"></script>
