--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-
-
 <head>
 
     <!-- Metas -->
@@ -30,17 +28,9 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
-        with our comprehensive digital marketing solutions. Specializing in SEO, 
-        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
-        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
-        Our tailored marketing solutions deliver measurable results, helping grow your business. 
-        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
-        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
-        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
-        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
-        maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative Kudi Digital Marketing Company - contact" />
+    <meta name="description"
+        content="Get in touch with us today. Our contact details and friendly team are just a click or call away, ready to assist you" />
+    <meta name="author" content="Kreative Kudi" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -53,10 +43,10 @@
     </script>
 
     <!-- Title  -->
-    <title>Where Creativity Meets Strategy | Contact us</title>
+    <title>Get in touch with us today | Contact us</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="personal logo/face c2.png" />
+    <link rel="shortcut icon" href="personal logo/face c2.png" alt="logo" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -133,28 +123,31 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="Institute.html">Institute</a>
-                            <a class="dropdown-item" href="Owner.html">Owner & CEo</a>
-
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Institute.html">Institute</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">portfolio</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="articles.html">Articles</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Owner.html">Founder</a>
+                    </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -264,7 +257,7 @@
                             <h3 class="wow" data-splitting>Visit Us.
                             </h3>
                             <div class="item">
-                                <h6>H-128 Sumel-6 Dhudheswer Ahmedabad-380004,
+                                <h6>SATYA TWO,near Bharat Petroleum,Shastrinagar, Naranpura, Ahmedabad-380013,
                                     <br>Gujarat, INDIA.
                                 </h6>
                             </div>
@@ -311,7 +304,7 @@
                                                   cursor: pointer;
                                                   box-shadow: 2px 2px 3px #999;
                                                 ">
-            <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+            <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
         </a>
 
         <!-- ==================== Start Footer ==================== -->
@@ -321,7 +314,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="item">
-                            <img src="personal logo/12.png" alt="">
+                            <img src="personal logo/12.png" alt="logo">
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -334,8 +327,9 @@
                                     <span class="icon pe-7s-map-marker"></span>
                                     <div class="cont">
                                         <h6> Address</h6>
-                                        <p>H-128 Sumel-6 Dhudheswer Ahmedabad-380004,
-                                            Gujarat, INDIA.</p>
+                                        <p>SATYA TWO,near Bharat Petroleum,</p>
+                                        <p>Shastrinagar, Naranpura, Ahmedabad-380013</p>
+                                        <p>Gujarat, INDIA</p>
                                     </div>
                                 </li>
                                 <li>
@@ -359,7 +353,7 @@
                     <div class="col-lg-4">
                         <div class="item">
                             <div class="logo">
-                                <img src="personal logo/b logo.png" alt="">
+                                <img src="personal logo/b logo.png" alt="logo">
                             </div>
                             <div class="social">
                                 <a href="https://www.facebook.com/kreativekudi"><i class="fab fa-facebook-f"></i></a>
@@ -386,10 +380,6 @@
     </div>
 
     <!-- ==================== End main-content ==================== -->
-
-
-
-
 
 
     <!-- jQuery -->
