--- a/Institute.html
+++ b/Institute.html
@@ -28,17 +28,9 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
-        with our comprehensive digital marketing solutions. Specializing in SEO, 
-        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
-        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
-        Our tailored marketing solutions deliver measurable results, helping grow your business. 
-        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
-        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
-        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
-        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
-        maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative Kudi Digital Marketing Institute" />
+    <meta name="description"
+        content="Learn digital marketing from Kreative Kudi, a reputable institute offering comprehensive courses. Enhance your skills and excel in the digital world." />
+    <meta name="author" content="Kreative Kudi" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -52,10 +44,10 @@
 
 
     <!-- Title  -->
-    <title>Your Graphic Designing Institute of Choice | Hands-On Learning, Limitless Creativity</title>
+    <title>Your Graphic Designing Institute | Hands-On Learning,Limitless Creativity</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="personal logo/face c2.png" />
+    <link rel="shortcut icon" href="personal logo/face c2.png" alt="logo" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -132,25 +124,26 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
-
-                            <a class="dropdown-item" href="Owner.html">owner & CEo</a>
-
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Institute.html">Institute</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">portfolio</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="articles.html">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Owner.html">Founder</a>
                     </li>
 
                     <li class="nav-item">
@@ -172,7 +165,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="img">
-                        <img src="personal logo/q1.png" alt="">
+                        <img src="personal logo/q1.png" alt="logo">
                     </div>
                 </div>
                 <div class="col-lg-7 valign">
@@ -306,7 +299,8 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="content wow fadeInUp" data-wow-delay=".3s">
-                                    <div class="item-img bg-img wow imago" data-background="img/blog/501.png">
+                                    <div class="item-img bg-img wow imago" data-background="img/blog/501.png"
+                                        alt="image">
                                     </div>
                                     <div class="cont bgbox">
                                         <h5>Basic Graphics Design</h5>
@@ -325,7 +319,8 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="content wow fadeInUp" data-wow-delay=".3s">
-                                    <div class="item-img bg-img wow imago" data-background="img/blog/502.png">
+                                    <div class="item-img bg-img wow imago" data-background="img/blog/502.png"
+                                        alt="image">
                                     </div>
                                     <div class="cont bgbox">
                                         <h5>Advance Photoshop</h5>
@@ -345,7 +340,8 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="content wow fadeInUp" data-wow-delay=".3s">
-                                    <div class="item-img bg-img wow imago" data-background="img/blog/503.png">
+                                    <div class="item-img bg-img wow imago" data-background="img/blog/503.png"
+                                        alt="image">
                                     </div>
                                     <div class="cont bgbox">
                                         <h5>Video Editing</h5>
@@ -366,7 +362,8 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="content wow fadeInUp" data-wow-delay=".3s">
-                                    <div class="item-img bg-img wow imago" data-background="img/blog/504.png">
+                                    <div class="item-img bg-img wow imago" data-background="img/blog/504.png"
+                                        alt="image">
                                     </div>
                                     <div class="cont bgbox">
                                         <h5>Ad. Digital Marketing</h5>
@@ -385,9 +382,7 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
                         <!-- slider setting -->
                         <div class="swiper-button-next swiper-nav-ctrl next-ctrl cursor-pointer">
                             <i class="ion-ios-arrow-right"></i>
@@ -622,22 +617,22 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
-                    <div class="item bg-img" data-background="img/blog/11.jpg">
+                    <div class="item bg-img" data-background="img/blog/11.jpg" alt="image">
                         <div class="cont">
-                            <a href="#0" class="date">
+                            <a href="article1.html" class="date">
                                 <span><i>17</i> Dec 2022</span>
                             </a>
                             <div class="info">
-                                <a href="#0" class="author">
+                                <a href="article1.html" class="author">
                                     <span>by</span>
                                 </a>
-                                <a href="#0" class="tag">
+                                <a href="article1.html" class="tag">
                                     <span>THE
                                         ECONOMIC TIMES</span>
                                 </a>
                             </div>
                             <h6>
-                                <a href="#0">WHAT IS "DIGITAL MARKETING" & its Components.</a>
+                                <a href="article1.html">WHAT IS "DIGITAL MARKETING" & its Components.</a>
                             </h6>
                             <div class="btn-more">
                                 <a href="article1.html" class="simple-btn">Read More</a>
@@ -646,21 +641,21 @@
                     </div>
                 </div>
                 <div class="col-lg-4 wow fadeInUp" data-wow-delay=".6s">
-                    <div class="item active bg-img" data-background="img/blog/10.jpg">
+                    <div class="item active bg-img" data-background="img/blog/10.jpg" alt="image">
                         <div class="cont">
-                            <a href="#0" class="date">
+                            <a href="article2.html" class="date">
                                 <span><i>20</i> Nov 2022</span>
                             </a>
                             <div class="info">
-                                <a href="#0" class="author">
+                                <a href="article2.html" class="author">
                                     <span>by</span>
                                 </a>
-                                <a href="#0" class="tag">
+                                <a href="article2.html" class="tag">
                                     <span>IIM SKILLS</span>
                                 </a>
                             </div>
                             <h6>
-                                <a href="#0">Digital Marketing Growth in
+                                <a href="article2.html">Digital Marketing Growth in
                                     India in 2023.</a>
                             </h6>
                             <div class="btn-more">
@@ -670,21 +665,21 @@
                     </div>
                 </div>
                 <div class="col-lg-4 wow fadeInUp" data-wow-delay=".9s">
-                    <div class="item bg-img" data-background="img/blog/13.png">
+                    <div class="item bg-img" data-background="img/blog/13.png" alt="image">
                         <div class="cont">
-                            <a href="#0" class="date">
+                            <a href="article3.html" class="date">
                                 <span><i>18</i> OCT 2022</span>
                             </a>
                             <div class="info">
-                                <a href="#0" class="author">
+                                <a href="article3.html" class="author">
                                     <span>by</span>
                                 </a>
-                                <a href="#0" class="tag">
+                                <a href="article3.html" class="tag">
                                     <span>DECCAN HERALD</span>
                                 </a>
                             </div>
                             <h6>
-                                <a href="#0">The Post-Pandemic Rise of Digital Marketing in
+                                <a href="article3.html">The Post-Pandemic Rise of Digital Marketing in
                                     India.</a>
                             </h6>
                             <div class="btn-more">
@@ -712,11 +707,11 @@
                                                                   cursor: pointer;
                                                                   box-shadow: 2px 2px 3px #999;
                                                                 ">
-        <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+        <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
     </a>
     <!-- ==================== Start call-to-action ==================== -->
 
-    <section class="call-action section-padding sub-bg bg-img" data-background="img/patrn.svg">
+    <section class="call-action section-padding sub-bg bg-img" data-background="img/patrn.svg" alt="image">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-lg-9">
@@ -754,8 +749,8 @@
                                 <span class="icon pe-7s-map-marker"></span>
                                 <div class="cont">
                                     <h6>Address</h6>
-                                    <p>H-128, Sumel Business Park-6 </p>
-                                    <p>Dhudheswer,Ahmedabad-380004</p>
+                                    <p>SATYA TWO,near Bharat Petroleum,</p>
+                                    <p>Shastrinagar, Naranpura, Ahmedabad-380013</p>
                                     <p>Gujarat, INDIA</p>
                                 </div>
                             </li>
@@ -794,7 +789,7 @@
                 <div class="col-lg-4">
                     <div class="item">
                         <div class="logo">
-                            <img src="personal logo/b logo.png" alt="">
+                            <img src="personal logo/b logo.png" alt="logo">
                         </div>
                         <div class="social">
                             <a href="https://www.facebook.com/kreativekudi"><i class="fab fa-facebook-f"></i></a>
@@ -816,11 +811,6 @@
     </footer>
 
     <!-- ==================== End Footer ==================== -->
-
-
-
-
-
 
     <!-- jQuery -->
     <script src="js/jquery-3.0.0.min.js"></script>
