--- a/about.html
+++ b/about.html
@@ -28,17 +28,9 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
-        with our comprehensive digital marketing solutions. Specializing in SEO, 
-        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
-        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
-        Our tailored marketing solutions deliver measurable results, helping grow your business. 
-        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
-        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
-        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
-        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
-        maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative Kudi Digital Marketing Company & Institute - About" />
+    <meta name="description"
+        content="Discover Kreative Kudi Digital Marketing Company: Your Trusted Partner for Digital Success. Learn More About Our Expertise and Commitment to Elevating Your Online Presence" />
+    <meta name="author" content="Kreative Kudi" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -54,7 +46,7 @@
     <title>Elevate Your Brand with Graphic Design and Digital Marketing</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="personal logo/face c2.png" />
+    <link rel="shortcut icon" href="personal logo/face c2.png" alt="logo" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
@@ -132,17 +124,15 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Institute.html">Institute</a>
+                    </li>
 
-                            <a class="dropdown-item" href="Institute.html">Institute</a>
-
-                            <a class="dropdown-item" href="Owner.html">Owner & CEo</a>
-
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
 
                     <li class="nav-item">
@@ -151,6 +141,9 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="articles.html">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Owner.html">Founder</a>
                     </li>
 
                     <li class="nav-item">
@@ -178,7 +171,7 @@
                 </div>
                 <div class="col-lg-10">
                     <div class="img">
-                        <img src="personal logo/23.png" alt="">
+                        <img src="personal logo/23.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -222,6 +215,62 @@
                         <p class="wow txt mb-10" data-splitting>Today, when a brand's virtual persona is imperative to
                             business success, "Kreative_kudi" strives to provide insightful and
                             future-forward solutions designed specifically for your brand.</p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                        <p class="wow txt mb-10" data-splitting></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="intro-section section-padding pb-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-4">
+                    <div class="htit sm-mb30">
+                        <h4>About us</h4>
+                    </div>
+                </div>
+                <div class="col-lg-8 offset-lg-1 col-md-8">
+                    <div class="text">
+                        <p class="wow txt mb-10" data-splitting>Welcome to Kreative Kudi Digital Marketing Company and
+                            Institute, where we specialize in transforming your online
+                            presence and driving exceptional results. With a core focus on SEO, social media management,
+                            and content marketing, we
+                            are dedicated to enhancing your brand's visibility and attracting targeted traffic to your
+                            website.</p>
+                        <p class="wow txt mb-10" data-splitting>At Kreative Kudi, we are not just experts; we are
+                            partners in your online success journey. We achieve this through
+                            strategic PPC campaigns and data-driven SEO strategies that deliver measurable results,
+                            ultimately propelling your
+                            business forward in the digital landscape.</p>
+                        <p class="wow txt mb-10" data-splitting>We understand that staying competitive in the online
+                            world requires a multifaceted approach. That's why Kreative Kudi
+                            offers a comprehensive suite of services, including website optimization, social media
+                            advertising, and compelling
+                            content creation. Our team of experts is also skilled in crafting captivating logos,
+                            stunning graphics, and effective
+                            brochures to help enhance your brand identity and increase customer engagement.</p>
+                        <p class="wow txt mb-10" data-splitting>In today's interconnected world, reaching and connecting
+                            with your audience across multiple platforms is crucial. With
+                            Kreative Kudi's top-notch services, we ensure that your brand shines brightly across the
+                            digital spectrum.</p>
+                        <p class="wow txt mb-10" data-splitting>But we don't stop there. We believe in harnessing the
+                            power of data to drive your marketing efforts. Through web
+                            analytics, conversion optimization, and targeted advertising, Kreative Kudi maximizes your
+                            return on investment and
+                            refines your strategies for optimal performance.</p>
+                        <p class="wow txt mb-10" data-splitting>Let Kreative Kudi Digital Marketing Company be your
+                            partner in success as we optimize your online presence and drive
+                            exponential business growth. With our proven expertise and dedication, your brand will
+                            thrive in the digital landscape.
+                            Transform your online presence with Kreative Kudi and experience the difference.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -513,7 +562,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="img">
-                        <img class="thumparallax-down" src="personal logo/12.png" alt="">
+                        <img class="thumparallax-down" src="personal logo/12.png" alt="logo">
                     </div>
                 </div>
                 <div class="col-lg-6 valign">
@@ -565,32 +614,32 @@
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".7s">
                                     <div class="img">
-                                        <img src="client logo/bhoomi consultancy.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Bhoomi Consultancy</a>
+                                        <img src="client logo/bhoomi consultancy.png" alt="image">
+                                        <a class="link" data-splitting>Bhoomi Consultancy</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".9s">
                                     <div class="img">
-                                        <img src="client logo/cakes n bakes.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Cakes n Bakes</a>
+                                        <img src="client logo/cakes n bakes.png" alt="image">
+                                        <a class="link" data-splitting>Cakes n Bakes</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".11s">
                                     <div class="img">
-                                        <img src="client logo/hastmelap.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Hastmelap</a>
+                                        <img src="client logo/hastmelap.png" alt="image">
+                                        <a class="link" data-splitting>Hastmelap</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".13s">
                                     <div class="img">
-                                        <img src="client logo/hotel earning.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Hotel Earnings</a>
+                                        <img src="client logo/hotel earning.png" alt="image">
+                                        <a class="link" data-splitting>Hotel Earnings</a>
                                     </div>
                                 </div>
                             </div>
@@ -599,32 +648,32 @@
                             <div class="col-md-3 col-6 brands sm-mb30">
                                 <div class="item wow fadeIn" data-wow-delay=".15s">
                                     <div class="img">
-                                        <img src="client logo/promax karma.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Promax Karma</a>
+                                        <img src="client logo/promax karma.png" alt="image">
+                                        <a class="link" data-splitting>Promax Karma</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands sm-mb30">
                                 <div class="item wow fadeIn" data-wow-delay=".17s">
                                     <div class="img">
-                                        <img src="client logo/shree medical education.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Shree Medical Education</a>
+                                        <img src="client logo/shree medical education.png" alt="image">
+                                        <a class="link" data-splitting>Shree Medical Education</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".19s">
                                     <div class="img">
-                                        <img src="client logo/shree tifin service.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Shree Tifin Service</a>
+                                        <img src="client logo/shree tifin service.png" alt="image">
+                                        <a class="link" data-splitting>Shree Tifin Service</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-6 brands">
                                 <div class="item wow fadeIn" data-wow-delay=".21s">
                                     <div class="img">
-                                        <img src="client logo/tirupati tirth.png" alt="">
-                                        <a href="#0" class="link" data-splitting>Tirupati Tirth</a>
+                                        <img src="client logo/tirupati tirth.png" alt="image">
+                                        <a class="link" data-splitting>Tirupati Tirth</a>
                                     </div>
                                 </div>
                             </div>
@@ -671,7 +720,7 @@
                                               cursor: pointer;
                                               box-shadow: 2px 2px 3px #999;
                                             ">
-        <img src="https://trickuweb.com/whatsapp.png" alt="" height="30px" width="30px" />
+        <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
     </a>
 
     <!-- ==================== End call-to-action ==================== -->
