--- a/index.html
+++ b/index.html
@@ -943,6 +943,21 @@
             <img src="https://trickuweb.com/whatsapp.png" alt="whatsapp" height="30px" width="30px" />
         </a>
 
+        <a href="tel:+918160581704" class="float" style="
+                                                  position: fixed;
+                                                  width: 30px;
+                                                  height: 30px;
+                                                  bottom: 30px;
+                                                  left: 80px;
+                                                  color: #fff;
+                                                  border-radius: 50px;
+                                                  text-align: center;
+                                                  cursor: pointer;
+                                                  box-shadow: 2px 2px 3px #999;
+                                                ">
+            <img src="personal logo\phone-call.png" alt="whatsapp" height="30px" width="30px" />
+        </a>
+
         <!-- ==================== End call-to-action ==================== -->
 
 
